@startuml
' ===============================
' PARKING LOT SYSTEM UML DIAGRAM
' ===============================

' === ENUMS ===
enum PaymentStatus {
  PENDING
  SUCCESS
  FAILED
}

enum PaymentMethod {
  CASH
  CREDIT_CARD
}

enum VehicleSize {
  SMALL
  MEDIUM
  LARGE
}

' === MAIN CLASSES ===
class ParkingLot {
  - parkingManager : ParkingManager
  - fareCalculator : FareCalculator
  - paymentProcessor : PaymentProcessor
  + enterVehicle(vehicle : Vehicle) : Ticket
  + exitVehicle(ticket : Ticket) : void
}

class ParkingManager {
  - parkingFloors : List<ParkingFloor>
  - vehicleSpotsMap : Map<Vehicle, ParkingSpot>
  + findSpotForVehicle(vehicle : Vehicle) : ParkingSpot
  + parkVehicle(vehicle : Vehicle) : Ticket
  + unparkVehicle(vehicle : Vehicle, method : PaymentMethod) : Payment
}

class ParkingFloor {
  - floorNumber : int
  - availableSpots : Map<VehicleSize, List<ParkingSpot>>
  + findSpotForVehicle(vehicle : Vehicle) : ParkingSpot
  + addSpot(spot : ParkingSpot) : void
}

class ParkingSpot {
  - spotNumber : int
  - size : VehicleSize
  - available : boolean
  + isAvailable() : boolean
  + occupy(vehicle : Vehicle) : void
  + vacate() : void
}

class Vehicle {
  + licensePlate : String
  + size : VehicleSize
}

class Car
class Motorcycle
class Truck

class Ticket {
  - ticketId : String
  - vehicle : Vehicle
  - entryTime : LocalDateTime
  - exitTime : LocalDateTime
  + calculateParkingDuration() : BigDecimal
}

class Payment {
  - amount : BigDecimal
  - method : PaymentMethod
  - timestamp : LocalDateTime
  - status : PaymentStatus
}

interface PaymentProcessor {
  + process(amount : BigDecimal) : Payment
}
class CashPaymentProcessor

class FareCalculator {
  - fareStrategies : List<FareStrategy>
  + calculateFare(ticket : Ticket) : BigDecimal
}

interface FareStrategy {
  + calculateFare(ticket : Ticket, baseFare : BigDecimal) : BigDecimal
}
class BaseFareStrategy
class PeakHoursFareStrategy


' === RELATIONSHIPS (WITH MULTIPLICITIES) ===
ParkingLot "1" -- "1" ParkingManager
ParkingLot "1" -- "1" FareCalculator
ParkingLot "1" -- "1" PaymentProcessor
ParkingLot "1" -- "*" ParkingFloor

ParkingManager "1" -- "*" Ticket
ParkingManager "1" -- "*" Vehicle
ParkingManager "1" -- "*" ParkingFloor

ParkingFloor "1" -- "*" ParkingSpot
ParkingSpot "1" -- "0..1" Vehicle

Ticket "1" -- "1" Vehicle
Ticket "1" -- "0..1" Payment
Payment "1" -- "1" PaymentProcessor

FareCalculator "1" -- "*" FareStrategy

PaymentProcessor <|-- CashPaymentProcessor
FareStrategy <|-- BaseFareStrategy
FareStrategy <|-- PeakHoursFareStrategy
Vehicle <|-- Car
Vehicle <|-- Motorcycle
Vehicle <|-- Truck

@enduml